# mojave

./: .gitignore  CMakeLists.txt  Eng.swl  README.md  StemBundle.cc  StemBundle.hpp  memIndex.cc  memIndex.hpp  mojave.cbp  mojave.cc  mojaveStorage.cc  mojaveStorage.hpp  sonnet.I.txt  spliter.py  storage.hpp
stemmer/: CMakeLists.txt  hash.c  hash.h  porter.cc  porter.h  types.h
